tests/miniJava/neg/000129_mutation.MiniJava
class java { public public int [] java ( ) { return 0 ; } static void Main ( String [ ] java ) { { } } }
